# pytest-allure-env

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
common/: load_file.py
data/: data.yaml
testcases/: test_api_requests.py
