[project]
name = ""
version = ""
description = ""
authors = [
    {name = "RicarTang", email = "357965604@qq.com"},
]
dependencies = [
    "requests>=2.31.0",
    "pytest>=7.4.3",
    "allure-pytest>=2.13.2",
    "PyYAML>=6.0.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

